<resources>
    <string name="app_name">StoryApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be 8 characters or more</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hint_password">password</string>
    <string name="hint_email">email</string>
    <string name="btn_login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="API_KEY">AIzaSyCLqGc3Vib8bY2UZsVUKtbBRSny5OAkYHM</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvLogin">Have a member? Login!</string>
    <string name="tvName">Name</string>
    <string name="tvEmail">Email</string>
    <string name="tvPassword">Password</string>
    <string name="tvRegister">Not a member? Sign up here!</string>
    <string name="EmptyEmailPassword">Email/Password Invalid!</string>
    <string name="shortPassword">Password too short!</string>
    <string name="SuccessLogin">Login Success!</string>
    <string name="info">Info</string>
    <string name="invalidLogin">Login Invalid!</string>
    <string name="invalidUser">User Invalid!</string>
    <string name="EmptyName">Name cannot be null!</string>
    <string name="EmptyEmail">Email cannot be null!</string>
    <string name="EmptyPassword">Password cannot be null!</string>
    <string name="tvRegisterPage">REGISTER PAGE</string>
    <string name="SuccessRegister">Register Success!</string>
    <string name="FailedRegister">Register Failed!</string>
    <string name="btn_register">Register</string>
    <string name="profile">User</string>
    <string name="name">Username</string>
    <string name="imgCamera">Image Camera</string>
    <string name="dashboard_username">Username</string>
    <string name="dashboard_description">Description</string>
    <string name="dashboard_created_at">Created At</string>
    <string name="detail_description">This is detail of description story</string>
    <string name="detail_created_at">2000/09/30</string>
    <string name="dashboard_created_by">By</string>
    <string name="detail_created_by">Ricky S</string>
    <string name="detail_story">Detail Story</string>
    <string name="permission_grant">Permission Granted</string>
    <string name="add_Story">Add Story</string>
    <string name="btn_camera">Camera</string>
    <string name="btn_gallery">Gallery</string>
    <string name="hint_description">Fill the description of the picture!</string>
    <string name="btn_upload">Upload</string>
    <string name="description_empty">The Description is EMPTY!</string>
    <string name="image_empty">The Image is Empty!</string>
    <string name="choose_image">Choose the pictures</string>
    <string name="log_out">Logout</string>
    <string name="change_language_settings">Change Language</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="text_adapter_maps_default">Default View (Country)</string>
    <string name="text_adapter_maps_province">Around My Province</string>
    <string name="text_adapter_maps_city">Around My City</string>
    <string name="text_adapter_maps_district">Around My District</string>
    <string name="text_adapter_maps_around">Around My Location</string>
    <string name="error_fetch_data">Error!</string>
    <string name="location">Location</string>
    <string name="content_description_image">content-description</string>
    <string name="error">Error!</string>
    <string name="refresh">refresh</string>
</resources>