<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.mainstory.activity.MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:cardCornerRadius="8dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/purple_900"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_story"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/app_name"
                tools:src="@tools:sample/avatars"/>

            <TextView
                android:id="@+id/tv_story_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/yellow_500"
                android:text="@string/dashboard_username"
                android:fontFamily="sans-serif"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_story_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/yellow_500"
                android:text="@string/dashboard_description"
                android:fontFamily="sans-serif"/>

            <TextView
                android:id="@+id/tv_story_created_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/yellow_500"
                android:text="@string/dashboard_created_at"
                android:fontFamily="sans-serif"
                android:textStyle="italic"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>