<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mainstory.activity.AddStoryActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/img_add_story"
        android:layout_width="320dp"
        android:layout_height="180dp"
        android:scaleType="center"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/backgrounds/scenic"/>

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/btn_camera"
        android:textColor="@color/yellow_500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_add_story" />

    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="40dp"
        android:text="@string/btn_gallery"
        android:textColor="@color/yellow_500"
        app:layout_constraintTop_toBottomOf="@id/img_add_story"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/ed_description"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_margin= "16dp"
        android:padding="16dp"
        android:textColor="@color/black"
        android:background="@color/grey_200"
        android:hint="@string/hint_description"
        app:layout_constraintTop_toBottomOf="@id/btn_camera"/>

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/btn_upload"
        android:textColor="@color/yellow_500"
        app:layout_constraintTop_toBottomOf="@id/ed_description"/>

</androidx.constraintlayout.widget.ConstraintLayout>